--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     border: 2px solid black;
     background-color: aqua;
 }
-.text{
+.salam{
     width: 100px;
     height: 50px;
     border: 2px solid black;
